--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,3 +333,13 @@ footer {
     }
 }
 
+#photos {
+    column-count: 3;
+}
+
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
+    
+}
